# PART1_Building_Apps_With_Django_Fundamental

Appendix_B/: B.1.1(enumerate).py  B.1.2(zip).py  B.1.3(list).py  B.1.4(iteration).py  B.2.1(comparisons).py  B.2.2(membership_testing).py  B.2.3(true_and_false).py  B.3.1(data_handling).py  B.3.2(args_and_kwargs).py  B.3.3(dict_access).py  B.3.4(with_statement).py  B.4.2(docstrings).py  tempCodeRunnerFile.py
Chapter_1/: example_1.1.py  example_1.2.py  example_1.3.py  example_1.4.py
Chapter_2/: Blessing_Each_Artifact_in_the_Treasury.py  Choosing_ a_Path_in_the_Enchanted Forest.py  Determining_a_Potion_ele_affinity.py  Halting_a_Purification_Ritual.py  Maintaining_a_Protective_Shield.py  Skipping_a_Flawed.py  The Guardian's Response Protocol.py  The_Alchemist's_Ingredient.py  The_Alchemist's_Persistent.py  The_Celestial_Clock's_Hourly_Chimes.py  example_2.1.py  example_2.10.py  example_2.11.py  example_2.12.py  example_2.13.py  example_2.14.py  example_2.15.py  example_2.16.py  example_2.17.py  example_2.18.py  example_2.19.py  example_2.2.py  example_2.20.py  example_2.3.py  example_2.4.py  example_2.5.py  example_2.6.py  example_2.7.py  example_2.8.py  example_2.9.py  example_orb_element_balance.py  triggering_a_defensive_ward.py
Chapter_3/: Cataloging_Magical_Artifacts.py  Filtering_Potions_by_Purity_Level.py  The Alchemist's_Instantaneous_Inventory_Transformation.py  The _Alchemist's_Data_Strategy.py  (+31 more)
Chapter_5/my_transmulation_magic/: pyproject.toml
Chapter_5/my_transmulation_magic/src/transmutation_magic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+85 files in other folders)
